--- a/src/app/style.css
+++ b/src/app/style.css
@@ -8,24 +8,196 @@
 }
 
 /* ############# Variables ############# */
+/* ############# Pantalla de Carga ############# */
+.Loading {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.nube-at1 {
+  z-index: 2;
+  top: 0;
+  right: -25%;
+  height: 90vh;
+  animation: nubeD 2.2s 0.5s 1 forwards;
+}
+
+.nube-at2 {
+  z-index: 3;
+  top: 0;
+  left: -25%;
+  height: 90vh;
+  animation: nubeIz 2.2s 0.5s 1 forwards;
+}
+
+.nube-ad1 {
+  z-index: 7;
+  bottom: -40%;
+  height: 90vh;
+  animation: nubeAbajo 2s 1.1s 1 forwards;
+}
+
+.nube-ad2 {
+  z-index: 6;
+  bottom: -40%;
+  height: 90vh;
+  animation: nubeAbajo 2s 1.1s 1 forwards;
+}
+
+.nube-iz {
+  height: 80vh;
+  left: -16%;
+  z-index: 4;
+  top: 20vh;
+  animation: nubeIz 2s 0.5s 1 forwards;
+}
+
+.nube-d {
+  height: 80vh;
+  right: -11%;
+  z-index: 5;
+  top: 20vh;
+  animation: nubeD 2s 0.5s 1 forwards;
+}
+
+.nube-fondo {
+  height: 90vh;
+  top: 0;
+  z-index: 1;
+  animation: nubeAbajo 2s 0.5s 1 forwards;
+}
+
+.sol {
+  background: linear-gradient(180deg, #FFAF79, #FA2F4C);
+  height: 306px;
+  width: 306px;
+  border-radius: 50%;
+  z-index: 0;
+  bottom: -5%;
+  box-shadow: 0 0 5px 1px rgba(250, 88, 47, 0.9921568627);
+  animation: sol 4.5s 0.5s 1 forwards;
+}
+
+.carga-stiker {
+  z-index: 1;
+  filter: brightness(0.1);
+  bottom: -25%;
+  animation: apareceStiker 3.5s 1.5s 1 forwards;
+}
+
+.blanco {
+  background-color: #FFFFFF;
+  opacity: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 10;
+  animation: aparecer 1s 4.2s 1 forwards;
+}
+
+/* ============== Pantalla de Carga - animaciones ============== */
+@keyframes nubeAbajo {
+  0% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(100%);
+  }
+}
+@keyframes nubeD {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+@keyframes nubeIz {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+@keyframes sol {
+  0% {
+    transform: translateY(0%);
+  }
+  40% {
+    transform: translateY(-100%);
+    box-shadow: 0 0 5px 1px rgba(250, 88, 47, 0.9921568627);
+  }
+  60% {
+    box-shadow: 0 0 200px 15px rgba(250, 88, 47, 0.9921568627);
+  }
+  100% {
+    transform: translateY(-100%);
+    box-shadow: 0 0 1800px 100px rgba(250, 88, 47, 0.9921568627);
+  }
+}
+@keyframes apareceStiker {
+  0% {
+    transform: translateY(0%);
+  }
+  30% {
+    filter: brightness(0.1);
+  }
+  50% {
+    transform: translateY(-270%);
+    filter: brightness(1) drop-shadow(0px 0px 2px gold);
+  }
+  100% {
+    transform: translateY(-270%);
+    filter: brightness(1) drop-shadow(0px 0px 800px gold);
+  }
+}
+@keyframes aparecer {
+  0% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+/* ############# App ############# */
 body {
   height: 100vh;
   width: 100vw;
-  color: #FFFFFF;
   background-image: linear-gradient(0deg, rgba(9, 20, 60, 0.7333333333), rgba(9, 20, 60, 0.7333333333)), url(../assets/img/backgroundImage.png);
   background-size: auto 100%;
   background-position: center;
   background-repeat: no-repeat;
-  font-family: "Oswald", sans-serif;
+  color: #FFFFFF;
   font-weight: 400;
   line-height: 34px;
+  overflow: hidden;
 }
 
-/* ############# App ############# */
-.App {
+.Main {
   width: 100%;
   height: 100vh;
+}
+
+.App {
+  width: 100%;
+  height: 100%;
   display: flex;
+  font-family: "Oswald", sans-serif;
+}
+
+.Loading {
+  width: 100%;
+  height: 100%;
+  background-color: #09143C;
 }
 
 /* ############# Navegador ############# */
@@ -47,8 +219,8 @@ body {
 }
 
 .Foto-Perfil-img {
-  background-image: url("../assets/img/perfil.png");
-  background-size: 80% auto;
+  background-image: url("../assets/img/carga/tipito.png");
+  background-size: 90% auto;
   background-position: center top;
   background-repeat: no-repeat;
 }
@@ -206,13 +378,16 @@ body {
   color: #FFFFFF;
   border-radius: 8px;
   background: var(--color-1, #09143C);
-  box-shadow: 0px 6px 10px 0px rgba(252, 97, 94, 0.35);
+  box-shadow: inset 0px 0px 0px 0px rgba(250, 47, 77, 0.5215686275), 0px 6px 10px 0px rgba(252, 97, 94, 0.35);
   padding: 12px 16px;
   align-self: flex-end;
   text-decoration: none;
 }
 .trabajo .info-trabajo button:active, .trabajo .info-trabajo a:active {
   background-color: #FA2F4C;
+}
+.trabajo .info-trabajo button:hover, .trabajo .info-trabajo a:hover {
+  box-shadow: inset 0px 0px 0px 2px rgba(250, 47, 77, 0.5215686275), 0px 6px 30px 1px rgba(252, 97, 94, 0.35);
 }
 .trabajo .info-trabajo button {
   opacity: 0.6;
@@ -263,6 +438,9 @@ body {
   align-items: center;
   cursor: pointer;
 }
+.SobreMi-nav div:hover {
+  box-shadow: inset 0px 0px 0px 2px rgba(250, 47, 77, 0.5215686275), 0px 0px 5px 0px rgba(250, 47, 77, 0.5215686275);
+}
 .SobreMi-nav div p {
   font-size: 20px;
   font-weight: 400;
@@ -292,6 +470,7 @@ body {
   width: 100%;
   height: 100%;
   padding: 24px 24px 24px 5%;
+  animation: downUp 0.3s 1 forwards;
 }
 
 .experiencias-nav {
@@ -314,6 +493,11 @@ body {
 .experiencias-nav button svg {
   margin: 0 16px;
   font-size: 24px;
+  color: #FFFFFF;
+}
+.experiencias-nav button:hover svg {
+  color: #E3DB1D;
+  font-size: 26px;
 }
 
 .exp-navCont {
@@ -329,6 +513,7 @@ body {
   justify-content: center;
   align-items: flex-end;
   border-radius: 8px 8px 0 0;
+  opacity: 0.5;
 }
 .exp-navCont .exp-nav img {
   width: 24px;
@@ -336,6 +521,8 @@ body {
   margin-bottom: 12px;
 }
 .exp-navCont .activo {
+  opacity: 1;
+  animation: aparecer 0.7s 1 forwards;
   background-color: rgba(227, 219, 29, 0.2);
   border: 2px solid #E3DB1D;
   border-bottom: none;
@@ -346,8 +533,8 @@ body {
   transition: none;
 }
 .exp-navCont .activo img {
-  width: initial;
-  height: initial;
+  width: 56px;
+  height: 56px;
 }
 .exp-navCont .activo::before {
   content: "";
@@ -384,6 +571,7 @@ body {
   border-radius: 8px;
   background-color: rgba(227, 219, 29, 0.2);
   z-index: 1;
+  animation: aparecer 0.7s 1 forwards;
   margin-top: -2px;
   display: none;
   grid-template-rows: min-content;
@@ -505,6 +693,7 @@ body {
 .Habilidades {
   width: 100%;
   height: 100%;
+  animation: downUp 0.3s 1 forwards;
   padding: calc(23% - 64px) 24px 64px 5%;
   display: grid;
   grid-template-columns: 1fr 1fr 1.5fr;
@@ -589,6 +778,7 @@ body {
 .Educacion {
   width: 100%;
   height: 100%;
+  animation: downUp 0.3s 1 forwards;
   padding: calc(23% - 64px) 24px 64px 5%;
   display: grid;
   grid-template-columns: 1fr 1.2fr;
@@ -717,6 +907,7 @@ body {
 
 /* ============== SobreMi - Valóres ============== */
 .Valores {
+  animation: downUp 0.3s 1 forwards;
   width: 100%;
   height: 100%;
   padding: 46px 34px;
@@ -836,20 +1027,31 @@ form .formulario-espacios {
 form .formulario-espacios .form-linkend {
   height: 32px;
   margin-bottom: 10px;
+  padding-left: 8px;
 }
 form .formulario-espacios textarea {
   height: 120px;
   margin-bottom: 10px;
+  padding-left: 8px;
+  padding-top: 8px;
 }
 form .formulario-espacios .form-submit {
-  background-color: #E3DB1D;
   padding: 8px 16px;
-  color: #000;
+  color: #FFFFFF;
   font-size: 32px;
+  background: var(--color-1, #09143C);
+  box-shadow: inset 0px 0px 0px 0px rgba(250, 47, 77, 0.5215686275), 0px 4px 15px 0px rgba(252, 97, 94, 0.35);
   border-radius: 8px;
   width: -moz-fit-content;
   width: fit-content;
   margin-left: 150px;
+  border: 0;
+}
+form .formulario-espacios .form-submit:active {
+  background-color: #FA2F4C;
+}
+form .formulario-espacios .form-submit:hover {
+  box-shadow: inset 0px 0px 0px 2px rgba(250, 47, 77, 0.5215686275), 0px 4px 30px 1px rgba(252, 97, 94, 0.35);
 }
 
 /* ############# Contenido Principal - Servicios ############# */
@@ -862,7 +1064,7 @@ form .formulario-espacios .form-submit {
   justify-content: center;
   align-items: center;
   transform: translateY(-100%);
-  animation: upDown 0.3s 0.2s 1 forwards;
+  animation: upDown 0.3s 0.1s 1 forwards;
 }
 
 .servicios-list {
@@ -940,7 +1142,7 @@ form .formulario-espacios .form-submit {
   color: #FFFFFF;
   border-radius: 8px;
   background: var(--color-1, #09143C);
-  box-shadow: 0px 4px 15px 0px rgba(252, 97, 94, 0.35);
+  box-shadow: inset 0px 0px 0px 0px rgba(250, 47, 77, 0.5215686275), 0px 4px 15px 0px rgba(252, 97, 94, 0.35);
   padding: 8px;
   text-decoration: none;
   cursor: pointer;
@@ -948,10 +1150,17 @@ form .formulario-espacios .form-submit {
 .callToAction a:active, .callToAction button:active {
   background-color: #FA2F4C;
 }
+.callToAction a:hover, .callToAction button:hover {
+  box-shadow: inset 0px 0px 0px 2px rgba(250, 47, 77, 0.5215686275), 0px 4px 30px 1px rgba(252, 97, 94, 0.35);
+}
 
 /* ############# Clases Comunes ############# */
 .displayNone {
   display: none;
+}
+
+.absolute {
+  position: absolute;
 }
 
 .centerDown {
@@ -977,6 +1186,14 @@ form .formulario-espacios .form-submit {
 @keyframes upDown {
   0% {
     transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+@keyframes downUp {
+  0% {
+    transform: translateY(200%);
   }
   100% {
     transform: translateY(0%);
