--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -18,24 +18,208 @@ $ColorFondo: linear-gradient(0deg, #09143cbb, #09143cbb);
 
 
 
+/* ############# Pantalla de Carga ############# */
+.Loading {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.nube-at1 {
+    z-index: 2;
+    top: 0;
+    right: -25%;
+    height: 90vh;
+    animation: nubeD 2.2s 0.5s 1 forwards;
+
+}
+
+.nube-at2 {
+    z-index: 3;
+    top: 0;
+    left: -25%;
+    height: 90vh;
+    animation: nubeIz 2.2s 0.5s 1 forwards;
+}
+
+.nube-ad1 {
+    z-index: 7;
+    bottom: -40%;
+    height: 90vh;
+    animation: nubeAbajo 2s 1.1s 1 forwards;
+
+}
+
+.nube-ad2 {
+    z-index: 6;
+    bottom: -40%;
+    height: 90vh;
+    animation: nubeAbajo 2s 1.1s 1 forwards;
+}
+
+.nube-iz {
+    height: 80vh;
+    left: -16%;
+    z-index: 4;
+    top: 20vh;
+    animation: nubeIz 2s 0.5s 1 forwards;
+
+}
+
+.nube-d {
+    height: 80vh;
+    right: -11%;
+    z-index: 5;
+    top: 20vh;
+    animation: nubeD 2s 0.5s 1 forwards;
+
+}
+
+.nube-fondo {
+    height: 90vh;
+    top: 0;
+    z-index: 1;
+    animation: nubeAbajo 2s 0.5s 1 forwards;
+}
+
+.sol {
+    background: linear-gradient(180deg, #FFAF79, #FA2F4C);
+    height: 306px;
+    width: 306px;
+    border-radius: 50%;
+    z-index: 0;
+    bottom: -5%;
+    box-shadow: 0 0 5px 1px #fa582ffd;
+    animation: sol 4.5s 0.5s 1 forwards;
+}
+
+.carga-stiker {
+    z-index: 1;
+    filter: brightness(0.1);
+    bottom: -25%;
+    animation: apareceStiker 3.5s 1.5s 1 forwards;
+}
+
+.blanco {
+    background-color: $Color2;
+    opacity: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 10;
+    animation: aparecer 1s 4.2s 1 forwards;
+}
+
+/* ============== Pantalla de Carga - animaciones ============== */
+@keyframes nubeAbajo {
+    0% {
+        transform: translateY(0%);
+    }
+    100% {
+        transform: translateY(100%);
+    }
+}
+
+@keyframes nubeD {
+    0% {
+        transform: translateX(0%);
+    }
+    100% {
+        transform: translateX(100%);
+    }
+}
+
+@keyframes nubeIz {
+    0% {
+        transform: translateX(0%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+@keyframes sol {
+    0% {
+        transform: translateY(0%);
+    }
+    40% {
+        transform: translateY(-100%);
+        box-shadow: 0 0 5px 1px #fa582ffd;
+    }
+    60% {
+        box-shadow: 0 0 200px 15px #fa582ffd;
+    }
+    100% {
+        transform: translateY(-100%);
+        box-shadow: 0 0 1800px 100px #fa582ffd;
+    }
+}
+
+@keyframes apareceStiker {
+    0% {
+        transform: translateY(0%);
+    }
+    30% {
+        filter: brightness(0.1);
+    }
+    50% {
+        transform: translateY(-270%);
+        filter: brightness(1) drop-shadow(0px 0px 2px gold);
+    }
+    100% {
+        transform: translateY(-270%);
+        filter: brightness(1) drop-shadow(0px 0px 800px gold);
+    }
+}
+
+@keyframes aparecer {
+    0% {
+       opacity: 0;
+    }
+    70% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+
+/* ############# App ############# */
 body {
     height: 100vh;
     width: 100vw;
-    color: $Color2;
     background-image: $ColorFondo, url(../assets/img/backgroundImage.png);
     background-size: auto 100% ;
     background-position: center;
     background-repeat: no-repeat;
-    font-family: 'Oswald', sans-serif;
+    color: $Color2;
     font-weight: 400;
     line-height: 34px;
+    overflow: hidden;
 }
 
-/* ############# App ############# */
-.App {
+
+.Main {
     width: 100%;
     height: 100vh;
+}
+
+.App {
+    width: 100%;
+    height: 100%;
     display: flex;
+    font-family: 'Oswald', sans-serif;
+}
+
+.Loading {
+    width: 100%;
+    height: 100%;
+    background-color: $Color1;
 }
 
 /* ############# Navegador ############# */
@@ -57,8 +241,8 @@ body {
 }
 
 .Foto-Perfil-img {
-    background-image: url('../assets/img/perfil.png');
-    background-size: 80% auto;
+    background-image: url('../assets/img/carga/tipito.png');
+    background-size: 90% auto;
     background-position: center top;
     background-repeat: no-repeat;
 }
@@ -212,12 +396,15 @@ body {
             color: $Color2;
             border-radius: 8px;
             background: var(--color-1, #09143C);
-            box-shadow: 0px 6px 10px 0px rgba(252, 97, 94, 0.35);
+            box-shadow: inset 0px 0px 0px 0px #fa2f4d85, 0px 6px 10px 0px rgba(252, 97, 94, 0.35);;
             padding: 12px 16px;
             align-self: flex-end;
             text-decoration: none;
             &:active {
                 background-color: $Color3;
+            }
+            &:hover {
+                box-shadow: inset 0px 0px 0px 2px #fa2f4d85, 0px 6px 30px 1px rgba(252, 97, 94, 0.35);
             }
         }
         button {
@@ -270,6 +457,9 @@ body {
         justify-content: center;
         align-items: center;
         cursor: pointer;
+        &:hover {
+            box-shadow: inset 0px 0px 0px 2px #fa2f4d85, 0px 0px 5px 0px #fa2f4d85;
+        }
         p {
             font-size: 20px;
             font-weight: 400;
@@ -297,6 +487,7 @@ body {
     width: 100%;
     height: 100%;
     padding: 24px 24px 24px 5%;
+    animation: downUp 0.3s 1 forwards;
 }
 
 .experiencias-nav {
@@ -317,6 +508,13 @@ body {
         svg {
             margin: 0 16px;
             font-size: 24px;
+            color: $Color2;
+        }
+        &:hover {
+            svg {
+                color: $Color4;
+                font-size: 26px;
+            }
         }
     }
 }
@@ -334,6 +532,7 @@ body {
         justify-content: center;
         align-items: flex-end;
         border-radius: 8px 8px 0 0;
+        opacity: 0.5;
         img {
             width: 24px;
             height: 24px;
@@ -342,6 +541,8 @@ body {
     }
 
     .activo {
+        opacity: 1;
+        animation: aparecer 0.7s 1 forwards;
         background-color:rgba(227, 219, 29, 0.20);
         border: 2px solid $Color4;
         border-bottom: none;
@@ -351,8 +552,8 @@ body {
         transition: none;
 
         img {
-            width: initial;
-            height: initial;
+            width: 56px;
+            height: 56px;
         }
         &::before {
             content: '';
@@ -392,6 +593,7 @@ body {
     border-radius: 8px;
     background-color:rgba(227, 219, 29, 0.20);
     z-index: 1;
+    animation: aparecer 0.7s 1 forwards;
     margin-top: -2px;
     display: none;
     grid-template-rows: min-content;
@@ -522,6 +724,7 @@ body {
 .Habilidades {
     width: 100%;
     height: 100%;
+    animation: downUp 0.3s 1 forwards;
     padding: calc(23% - 64px) 24px 64px 5%;
     display: grid;
     grid-template-columns: 1fr 1fr 1.5fr;
@@ -604,6 +807,7 @@ body {
 .Educacion {
     width: 100%;
     height: 100%;
+    animation: downUp 0.3s 1 forwards;
     padding: calc(23% - 64px) 24px 64px 5%;
     display: grid;
     grid-template-columns: 1fr 1.2fr;
@@ -740,6 +944,7 @@ body {
 
 /* ============== SobreMi - Valóres ============== */
 .Valores {
+    animation: downUp 0.3s 1 forwards;
     width: 100%;
     height: 100%;
     padding: 46px 34px;
@@ -857,19 +1062,30 @@ form {
         .form-linkend {
             height: 32px;
             margin-bottom: 10px;
+            padding-left: 8px;
         }
         textarea {
             height: 120px;
             margin-bottom: 10px;
+            padding-left: 8px;
+            padding-top: 8px;
         }
         .form-submit {
-            background-color: #E3DB1D;
             padding: 8px 16px;
-            color: #000;
+            color: $Color2;
             font-size: 32px;
+            background: var(--color-1, #09143C);
+            box-shadow: inset 0px 0px 0px 0px #fa2f4d85, 0px 4px 15px 0px rgba(252, 97, 94, 0.35);
             border-radius: 8px;
             width: fit-content;
             margin-left: 150px;
+            border: 0;
+            &:active {
+                background-color: $Color3;
+            }
+            &:hover {
+                box-shadow: inset 0px 0px 0px 2px #fa2f4d85, 0px 4px 30px 1px rgba(252, 97, 94, 0.35);
+            }
         }
     }
 }
@@ -884,7 +1100,7 @@ form {
     justify-content: center;
     align-items: center;
     transform: translateY(-100%);
-    animation: upDown 0.3s 0.2s 1 forwards;
+    animation: upDown 0.3s 0.1s 1 forwards;
     
 }
 
@@ -962,12 +1178,15 @@ form {
         color: $Color2;
         border-radius: 8px;
         background: var(--color-1, #09143C);
-        box-shadow: 0px 4px 15px 0px rgba(252, 97, 94, 0.35);
+        box-shadow: inset 0px 0px 0px 0px #fa2f4d85, 0px 4px 15px 0px rgba(252, 97, 94, 0.35);
         padding: 8px;
         text-decoration: none;
         cursor: pointer;
         &:active {
             background-color: $Color3;
+        }
+        &:hover {
+            box-shadow: inset 0px 0px 0px 2px #fa2f4d85, 0px 4px 30px 1px rgba(252, 97, 94, 0.35);
         }
         
     }
@@ -976,6 +1195,10 @@ form {
 /* ############# Clases Comunes ############# */
 .displayNone {
     display: none;
+}
+
+.absolute {
+    position: absolute;
 }
 
 .centerDown {
@@ -1003,6 +1226,15 @@ form {
 @keyframes upDown {
     0% {
         transform: translateY(-100%);
+    }
+    100% {
+        transform: translateY(0%);
+    }
+}
+
+@keyframes downUp {
+    0% {
+        transform: translateY(200%);
     }
     100% {
         transform: translateY(0%);
