--- a/src/app/style.css
+++ b/src/app/style.css
@@ -185,6 +185,7 @@ body {
 .Main {
   width: 100%;
   height: 100vh;
+  overflow: hidden;
 }
 
 .App {
@@ -219,10 +220,14 @@ body {
 }
 
 .Foto-Perfil-img {
-  background-image: url("../assets/img/carga/tipito.png");
-  background-size: 90% auto;
-  background-position: center top;
+  background-image: url("../assets/img/yo-portada.png");
+  background-size: 130% auto;
+  background-position: 40% top;
   background-repeat: no-repeat;
+  cursor: pointer;
+}
+.Foto-Perfil-img:hover {
+  background-size: 150% auto;
 }
 
 .Cont-Nav {
@@ -269,6 +274,19 @@ body {
 .Links p svg {
   margin-right: 8px;
 }
+.Links p a {
+  font-size: 16px;
+  text-decoration: none;
+  color: #FFFFFF;
+}
+.Links p a:hover {
+  text-decoration: underline;
+}
+
+.titulo {
+  -webkit-clip-path: polygon(11% 0, 0 0, 0 100%, 8% 100%);
+          clip-path: polygon(11% 0, 0 0, 0 100%, 8% 100%);
+}
 
 /* ############# Contenido Principal - Home ############# */
 .Cont-Principal {
@@ -299,15 +317,45 @@ body {
 }
 
 .img-sujeto {
-  height: 80vh;
-  margin-top: 10%;
-  margin-left: 3%;
+  height: 90vh;
+  margin-top: 9%;
+  margin-left: 0%;
+  transform: translateX(-130%);
+  animation: leftCenter 0.5s 1 0.1s forwards;
 }
 
 .sujeto {
   margin-top: 6%;
 }
+.sujeto h1, .sujeto h2 {
+  opacity: 0;
+}
+.sujeto .img-sujeto-desc {
+  position: absolute;
+  margin-left: -40%;
+  z-index: -1;
+  top: 30%;
+}
+.sujeto .img-sujeto-desc img {
+  width: 78vw;
+  -webkit-clip-path: polygon(0 100%, 0 100%, 100% 100%, 0 100%, 0 0);
+          clip-path: polygon(0 100%, 0 100%, 100% 100%, 0 100%, 0 0);
+  animation: corte 0.5s 1 0.5s forwards;
+}
+.sujeto .img-sujeto-desc .titulo2-sujeto {
+  margin-top: -30%;
+}
 
+@keyframes corte {
+  0% {
+    -webkit-clip-path: polygon(0 100%, 0 100%, 100% 100%, 0 100%, 0 0);
+            clip-path: polygon(0 100%, 0 100%, 100% 100%, 0 100%, 0 0);
+  }
+  100% {
+    -webkit-clip-path: polygon(100% 0, 100% 49%, 100% 100%, 0 100%, 0 0);
+            clip-path: polygon(100% 0, 100% 49%, 100% 100%, 0 100%, 0 0);
+  }
+}
 /* ############# Contenido Principal - Portafolio ############# */
 .Portafolio {
   width: 100%;
@@ -330,6 +378,9 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #09143C;
+}
+.lista-trabajos div:hover {
+  box-shadow: inset 0px 0px 0px 2px rgba(250, 47, 77, 0.5215686275), 0px 0px 10px 0px rgba(250, 47, 77, 0.5215686275);
 }
 .lista-trabajos .active-trab {
   background-color: #FA2F4C;
@@ -1183,6 +1234,14 @@ form .formulario-espacios .form-submit:hover {
     transform: translateX(0%);
   }
 }
+@keyframes leftCenter {
+  0% {
+    transform: translateX(-130%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
 @keyframes upDown {
   0% {
     transform: translateY(-100%);
@@ -1200,6 +1259,11 @@ form .formulario-espacios .form-submit:hover {
   }
 }
 @media only screen and (min-width: 1000px) and (max-width: 1300px) {
+  .img-sujeto {
+    height: 82vh;
+    margin-top: 15%;
+    margin-left: -1%;
+  }
   /* ############# Navegador ############# */
   .Foto-Perfil {
     width: 48%;
@@ -1267,7 +1331,7 @@ form .formulario-espacios .form-submit:hover {
     margin: 12px 0 16px 0;
   }
 }
-@media only screen and (max-height: 740px) {
+@media only screen and (min-width: 1000px) and (max-width: 1300px) and (max-height: 740px) {
   .lista-trabajos {
     margin-bottom: 2%;
   }
@@ -1313,4 +1377,102 @@ form .formulario-espacios .form-submit:hover {
   .referecias {
     padding: 5% 10% 0 10%;
   }
+}
+@media only screen and (min-width: 300px) and (max-width: 700px) {
+  /* ############# App ############# */
+  .App {
+    flex-direction: column;
+  }
+  .header-movil {
+    height: 60px;
+    width: 100%;
+    padding: 18px 24px;
+    background-color: #09143C;
+  }
+  .header-movil svg {
+    font-size: 28px;
+    transition: 0.3s all;
+  }
+  .header-movil .activo {
+    color: #FA2F4C;
+  }
+  .main-movil {
+    display: flex;
+    width: 100vw;
+    overflow: hidden;
+  }
+  .footer-movil {
+    width: 100%;
+    padding: 12px 0 16px 0;
+    background-color: #09143C;
+  }
+  /* ############# Navegador ############# */
+  .Navegador {
+    width: 306px;
+    transition: 0.3s all;
+    margin-left: 0;
+  }
+  .navMove {
+    margin-left: -306px;
+  }
+  .Foto-Perfil {
+    width: 182px;
+    height: 182px;
+  }
+  .Cont-Nav {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+  }
+  .Cont-Nav .activo {
+    background-color: #FA2F4C;
+  }
+  .Links p {
+    margin: 0;
+  }
+  /* ############# Contenido Principal - Portafolio ############# */
+  .Cont-Principal {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .home {
+    width: 100%;
+    padding-top: 160px;
+    justify-content: flex-start;
+    align-items: flex-end;
+  }
+  .img-sujeto {
+    height: 513px;
+    margin: 0;
+    transform: translateX(-100%);
+    animation: leftCenter 0.5s 1 0.1s forwards;
+  }
+  .sujeto {
+    margin-top: 0%;
+  }
+  .sujeto h1, .sujeto h2 {
+    opacity: 0;
+    margin: 0;
+  }
+  .sujeto .img-sujeto-desc {
+    position: absolute;
+    right: 0;
+    margin: 0;
+    margin-top: -20%;
+  }
+  .sujeto .img-sujeto-desc img {
+    width: 100vw;
+  }
+  .sujeto .img-sujeto-desc .titulo1-sujeto {
+    margin-bottom: -12px;
+  }
+  /* ============== SobreMi - Experiencia ============== */
+  /* ============== SobreMi - Habilidad ============== */
+  /* ============== SobreMi - Valóres ============== */
+  /* ############# Contenido Principal - Servicios ############# */
 }/*# sourceMappingURL=style.css.map */
