--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1415,6 +1415,7 @@ form .formulario-espacios .form-submit:hover {
     width: 306px;
     transition: 0.3s all;
     margin-left: 0;
+    z-index: 99;
   }
   .navMove {
     margin-left: -306px;
@@ -1499,6 +1500,13 @@ form .formulario-espacios .form-submit:hover {
     width: 60px;
     height: 60px;
     margin-bottom: 30px;
+  }
+  .lista-trabajos div a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .lista-trabajos .nav-portafolio {
     position: absolute;
