--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -1469,6 +1469,7 @@ form {
     width: 306px;
     transition: 0.3s all;
     margin-left: 0;
+    z-index: 99;
 }
 
 .navMove {
@@ -1558,6 +1559,13 @@ form {
         width: 60px;
         height: 60px;
         margin-bottom: 30px;
+        a {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     }
 
     .nav-portafolio {
