--- a/src/app/style.css
+++ b/src/app/style.css
@@ -172,7 +172,7 @@
 body {
   height: 100vh;
   width: 100vw;
-  background-image: linear-gradient(0deg, rgba(9, 20, 60, 0.7333333333), rgba(9, 20, 60, 0.7333333333)), url(../assets/img/backgroundImage.png);
+  background-image: linear-gradient(0deg, rgba(9, 20, 60, 0.7333333333), rgba(9, 20, 60, 0.7333333333)), url(../assets/img/backgroundImage.webp);
   background-size: auto 100%;
   background-position: center;
   background-repeat: no-repeat;
