--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -193,7 +193,7 @@ $ColorFondo: linear-gradient(0deg, #09143cbb, #09143cbb);
 body {
     height: 100vh;
     width: 100vw;
-    background-image: $ColorFondo, url(../assets/img/backgroundImage.png);
+    background-image: $ColorFondo, url(../assets/img/backgroundImage.webp);
     background-size: auto 100% ;
     background-position: center;
     background-repeat: no-repeat;
