--- a/src/app/style.css
+++ b/src/app/style.css
@@ -974,7 +974,7 @@ body {
   height: 100%;
   display: flex;
   justify-content: space-evenly;
-  align-items: end;
+  align-items: flex-end;
   gap: 24px;
 }
 .Valores .valores-list .valores-cont {
@@ -1398,10 +1398,21 @@ form .formulario-espacios .form-submit:hover {
   }
   .header-movil svg {
     font-size: 28px;
+    padding: 4px 8px;
+    border-radius: 8px;
     transition: 0.3s all;
+    animation: showButton 0.8s 2s 10;
   }
   .header-movil .activo {
     color: #FA2F4C;
+  }
+  @keyframes showButton {
+    0% {
+      box-shadow: inset 0px 0px 0px 0px rgba(250, 47, 77, 0.5215686275), 0px 4px 15px 0px rgba(252, 97, 94, 0.35);
+    }
+    100% {
+      box-shadow: inset 0px 0px 0px 2px rgba(250, 47, 77, 0.5215686275), 0px 4px 30px 1px rgba(252, 97, 94, 0.35);
+    }
   }
   .main-movil {
     display: flex;
@@ -1420,6 +1431,7 @@ form .formulario-espacios .form-submit:hover {
   .Navegador {
     width: 306px;
     transition: 0.3s all;
+    position: absolute;
     margin-left: 0;
     z-index: 99;
   }
